infrastructure/k8s/base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instagram-ingress
  namespace: instagram
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3051
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3050
